# polimedika-test-task

./: .env  .gitignore  Dockerfile  Readme.md  pyproject.toml
migrations/: env.py
migrations/versions/: a4d485040738_init.py  fba396417537_add_fields.py
src/: config.py  database.py  main.py
src/app/: models.py  schemas.py
src/app/crud/: crud.py
src/app/routers/: courses.py  grades.py  students.py  teachers.py
