[tool.poetry]
name = "polimedika"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
SQLAlchemy = "^2.0.15"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
psycopg2-binary = "^2.9.6"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
pytest = "^7.3.2"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
